fixed button shadow & movieName alignment

--- a/moviesLookup.css
+++ b/moviesLookup.css
@@ -9,6 +9,12 @@ body {
   height: 200px;
 }
 
+button:hover{
+box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(1, 162, 55, 0.342) 0px 18px 36px -18px inset;;
+}
+button:active{
+  color: #414833;
+}
 main {
   display: flex;
   justify-content: center;
@@ -25,6 +31,7 @@ main {
   gap: 5px;
   text-decoration: underline;
   font-weight: bold;
+  max-width: 200px;
 }
 
 form {
